# progetto_finale

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Progetto finale laboratorio.docx  README.md  battaglia_navale  cmake_install.cmake  file_log_cc.txt  file_log_pc.txt  out.txt  output_pc.txt  replay  test  test.txt
include/: attack_grid.hpp  bot.h  corazzata.h  defense_grid.hpp  empty.h  esploratore.h  grid.hpp  grids.hpp  movement.h  player.h  ship.h  ships.h  supporto.h  utility.h
include/grid/: attack_grid.hpp  defense_grid.hpp  grid.hpp
include/ship/: .movement.h.swp  corazzata.h  empty.h  esploratore.h  movement.h  ship.h  supporto.h
src/: a.out  attack_grid.cpp  battaglia_navale.cpp  bot.cpp  corazzata.cpp  defense_grid.cpp  empty.cpp  esploratore.cpp  grid.cpp  grids.cpp  grids_test.cpp  log_prova.txt  main.cpp  movement.cpp  player.cpp  replay.cpp  ship.cpp  ships.cpp  supporto.cpp  test.cpp  utility.cpp
src/grid/: attack_grid.cpp  defense_grid.cpp  grid.cpp
src/ship/: corazzata.cpp  empty.cpp  esploratore.cpp  insert_util.cpp  movement.cpp  ship.cpp  supporto.cpp
